@@ -29,7 +29,7 @@ sub blowinout {
 
     # Create a grayscale workspace image for displacement map
     my $dm = gimp_image_new($xsize, $ysize, 1);
-    eval { $dm->undo_push_group_start($dm) };
+    eval { $dm->undo_push_group_start };
     # It needs to have 2 layers
     my $dmlayer = gimp_layer_new($dm, $xsize, $ysize, GRAY_IMAGE, "newlayer", 
         100, NORMAL_MODE);
