@@ -3,17 +3,18 @@
 use Gimp;
 use Gimp::Fu;
 
-register "my_first_gimp_fu",				# fill in a function name
-         "My very first Gimp::Fu script",		# and a short description,
+register "gimp_fu_example_script",			# fill in a function name
+         "A non-working example of Gimp::Fu usage",	# and a short description,
          "Just a starting point to derive new ".        # a (possibly multiline) help text
             "scripts. Always remember to put a long".
             "help message here!",
-         "My name",					# don't forget your name (author)
-         "My name (my copyright)",			# and your copyright!
-         "19981006",					# the date this script was written
-         "<Toolbox>/Xtns/My Very First",		# the menu path
-         "*",						# which image types do I accept (all)
+         "Marc Lehmann",				# don't forget your name (author)
+         "(c) 1998, 1999 Marc Lehmann",			# and your copyright!
+         "19990316",					# the date this script was written
+         "<Toolbox>/Xtns/Gimp::Fu Example",		# the menu path
+         "RGB*, GRAYA",					# image types to accept (RGB, RGAB amnd GRAYA)
          [
+         # argument type, switch name	, a short description		, default value, extra arguments
           [PF_SLIDER	, "width"	, "The image width"		, 360, [300, 500]],
           [PF_SPINNER	, "height"	, "The image height"		, 100, [100, 200]],
           [PF_STRING	, "text"	, "The Message"			, "example text"],
@@ -35,21 +36,35 @@ register "my_first_gimp_fu",				# fill in a function name
    # now do sth. useful with the garbage we got ;)
    my($width,$height,$text,$font,$fg,$bg,$ignore,$brush,$pattern,$gradient)=@_;
    
+   # set tracing
    Gimp::set_trace(TRACE_ALL);
 
    my $img=new Image($width,$height,RGB);
    
+   # put an undo group around any modifications, so that
+   # they can be undone in one step. The eval shields against
+   # gimp-1.0, which does not have this function.
+   eval { $img->undo_push_group_start };
+   
    my $l=new Layer($img,$width,$height,RGB,"Background",100,NORMAL_MODE);
-   $l->add_layer(-1);
+   $l->add_layer(0);
+
+   # now a few syntax examples
    
    Palette->set_foreground($fg) unless $ignore;
    Palette->set_background($bg) unless $ignore;
    
    fill $l BG_IMAGE_FILL;
+
+   # the next function only works in gimp-1.1
    $text_layer=$img->text_fontname(-1,10,10,$text,5,1,xlfd_size($font),$font);
+
    gimp_palette_set_foreground("green");
    
-   $img;	# return the image, or undef
+   # close the undo push group
+   eval { $img->undo_push_group_end };
+
+   $img;	# return the image, or an empty list, i.e. ()
 };
 
 exit main;
