@@ -1,6 +1,11 @@
 Revision history for Gimp-Perl extension.
 
 	- changed the definition of PF_RADIO, simplifying it (it ain't no C).
+        - Gimp::Fu scripts try to run with default arguments if Gtk is not
+          available.
+        - implemented PF_FILE, for selecting filesystem objects.
+        - improved and fixed parasite support.
+        - Gimp::Data now uses parasites when available.
 
 1.07  Mon Mar 15 01:27:05 CET 1999
 	- added examples/yinyang, examples/image_tile, examples/stamps.
